# disaster-relief-mas

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  README.md  pyproject.toml  requirements-core.txt  requirements-llm.txt  requirements-stretch.txt
docs/: COMMUNICATION_CONTRACT.md  COURSE_ALIGNMENT.md  DESIGN.md  EVALUATION_PLAN.md  MARL_BRIDGE.md  REFLECTION.md  SAFETY_GOVERNANCE.md  SYSTEM_BRIEF.md
evals/: run_evals.py  scenarios.jsonl
evidence/: audit_log.jsonl  decision_package.json  eval_report.json  results.csv  rl_training.json  run_log.txt  sample_llm_extract.txt  scenario_report.json  stress_report.json
paper/: report.tex
slides/: slides.tex
src/bayanihan_net/: __init__.py  baselines.py  blackboard.py  cli.py  config.py  engine.py  incidents.py  messages.py  network.py  plotting.py  provenance.py  scenario.py
src/bayanihan_net/agents/: __init__.py  auditor.py  base.py  coordinator.py  forecast.py  logistics.py  medical.py  routing.py  sensing.py  triage.py
src/bayanihan_net/coordination/: __init__.py  blackboard_bus.py  contract_net.py  escalation.py
src/bayanihan_net/governance/: __init__.py  metrics.py  policy.py
src/bayanihan_net/interop/: __init__.py  a2a.py  mcp_tools.py
src/bayanihan_net/perception/: __init__.py  llm_extract.py  report_text.py
src/bayanihan_net/rl/: __init__.py  evaluate.py  marl.py  routing_env.py
tests/: test_baselines.py  test_cli.py  test_coordination.py  test_engine.py  test_interop.py  test_messages.py  test_perception.py  test_rl.py  test_world.py
